--- a/Lorem1.html
+++ b/Lorem1.html
@@ -1,98 +1,45 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Document</title>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="container-grid">
-        <div class="container-landing">
-            <header class="header">
-                <nav class="header__nav">
-                    <ul class="header__nav--ul">
-                        <li>
-                            <a href="./Quienes-somos.html">Quienes somos </a>
-                        </li>
-                        <li>
-                            <a href="./Catalogo.html">Catalogo</a>
-                        </li>
-                        <li>
-                            <a href="./Lorem1.html">Contáctenos</a>
-                        </li>
-                        <li>
-                            <a href="./Lorem.html">Lorem </a>
-                        </li>
-                    </ul>
-                </nav>
-
-                <div class="header__titulo">
-                    <h1>Lorem ipsum dolor, sit amet adipisicing.</h1>
-                    <div class="boton">
-                        <a href="#1">Ver más.</a>
-                    </div>
-                </div>
-            </header>
-            <div class="form-container">
-                <form class="form" action="">
-                    <label for="nombre">Nombre</label>
-                    <input class="form__input" type="text" name="nombre" id="nombre">
-                    <label for="apellido">Apellido</label>
-                    <input class="form__input" type="text" name="apellido" id="apellido">
-                    <label for="email">Email</label>
-                    <input class="form__input" type="email" name="email" id="email">
-                    <label for="contraseña">Contraseña</label>
-                    <input class="form__input" type="password" name="contraseña" id="contraseña">
-                    <label for="dni">N° DNI</label>
-                    <input class="form__input" type="text" name="dni" id="dni">
-                    <label for="comentarios">Comentarios</label>
-                    <input class="form__input" type="text" name="comentarios" id="comentarios">
-                    <button class="form__btn" type="reset">Resetear</button>
-                    <button class="form__btn2" type="submit">Enviar</button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./assets/logo-fiat.png" alt="" width="30" height="24">
+                </a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Quienes-somos.html">Quienes somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Catalogo.html">Catálogo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Lorem1.html">Otra sección</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Lorem.html">Otra sección1</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
         </div>
-        <!-- Me falta establecer una altura -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/Toro.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/Strada.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/Cronos.jpg" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-        <footer class="footer">
+    </nav>
+    <footer class="footer">
             <div class="contactenos">
                 <h3>Contáctenos</h3>
                 <a href="#">
@@ -127,10 +74,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam velit quod sunt.</p>
             </div>
         </footer>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-    </script>
-</body>
+        <!-- No me toma esta parte el navegador-->
+    </footer>
 
 </html>
