--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Contacto</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -16,30 +16,28 @@
 <body>
     <div class="container-grid">
         <div class="landing-page">
-            <nav class="nav navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
                 <div class="container-fluid">
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <a class="navbar-brand" href="./index.html">
-                            <img src="./assets/logo-fiat.png" alt="" width="30" height="24">
-                        </a>
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <a class="navbar-brand text-white" href="#"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="./Quienes-somos.html">Quienes somos</a>
+                                <a class="nav-link text-white" href="./Quienes-somos.html">Quienes somos</a> 
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./Catalogo.html">Catálogo</a>
+                                <a class="nav-link text-white" href="./Catalogo.html">Catálogo</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./contacto.html">Contacto</a>
+                                <a class="nav-link text-white" href="./contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./clientes.html">Clientes</a>
+                                <a class="nav-link text-white" href="./clientes.html">Clientes</a>
                             </li>
                         </ul>
-                        <form class="d-flex">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
                     </div>
                 </div>
             </nav>
@@ -56,7 +54,7 @@
                         d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                 </svg>
                 <a href=""></a> <!-- Link del footer para que vaya solo -->
-            </div> 
+            </div>
         </div>
     </div>
 
