--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container-grid">
-        <div class="landing-page">
+        <div id="landing" class="landing-page">
             <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
                 <div class="container-fluid">
                     <a class="navbar-brand text-white" href="#"></a>
@@ -44,7 +44,7 @@
             <div class="titulo-principal">
                 <h1>Lorem, ipsum dolor sit amet consectetur.</h1>
                 <div class="boton">
-                    <a href="#">Ver Más</a>
+                    <a href="./html/catalogo.html">Ver Más</a>
                 </div>
             </div>
             <div class="arrow">
@@ -53,7 +53,7 @@
                     <path fill-rule="evenodd"
                         d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                 </svg>
-                <a href=""></a> <!-- Link del footer para que vaya solo -->
+                <a href="#footer"></a>
             </div>
         </div>
         <!-- CARRUSEL -->
@@ -68,21 +68,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/Toro.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/auto1-m.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <div class="btn btn-primary"><a href="./html/catalogo.html">Ver Más</a></div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/Strada.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/auto2-m.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <div class="btn btn-primary"><a href="./html/catalogo.html">Ver Más</a></div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/Cronos.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/auto-3-m.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <div class="btn btn-primary"><a href="./html/catalogo.html">Ver Más</a></div>
@@ -101,7 +101,7 @@
             </button>
         </div>
         <!-- FOOTER -->
-        <footer class="footer">
+        <footer id="footer" class="footer">
             <div class="footer__redes">
                 <h5>Escríbanos en nuestras redes</h5>
                 <div class="footer__redes--iconos">
@@ -131,7 +131,7 @@
                             </svg>
                         </a>
                     </div>
-                    <div class="icono"> 
+                    <div class="icono">
                         <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-facebook" viewBox="0 0 16 16">
@@ -149,6 +149,12 @@
             </div>
             <div class="footer__textos">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <div class="footer__textos--arrow">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
+</svg>
+                <a href="#landing"></a>
+            </div>
             </div>
         </footer>
     </div>
