--- a/html/catalogo.html
+++ b/html/catalogo.html
@@ -13,39 +13,36 @@
 
 <body>
     <header id="header" class="header">
-        <!-- No se despliega el navbar --> 
-        <div class="container__navbar">
-            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-                <div class="container-fluid">
-                    <a class="navbar-brand text-white" href="#"></a>
-                    <button class="hamburguer navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="../index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="../html/quienes-somos.html">Quienes somos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="../html/catalogo.html">Catálogo</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="../html/contacto.html">Contacto</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="../html/clientes.html">Clientes</a>
-                            </li>
-                        </ul>
+            <div class="container__navbar">
+                <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                    <div class="container-fluid">
+                        <a class="navbar-brand text-white" href="#"></a>
+                        <button class="hamburguer navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="../index.html">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="../html/quienes-somos.html">Quienes somos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="../html/catalogo.html">Catálogo</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="../html/contacto.html">Contacto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="../html/clientes.html">Clientes</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </nav>
-        </div>
-    </header>
+                </nav>
     <main class="catalogo">
         <h2>Catálogo</h2>
         <div class="catalogo__container">
@@ -145,6 +142,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
