--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -21,16 +21,16 @@
                     </a>
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="./Quienes-somos.html">Quienes somos</a>
+                            <a class="nav-link" href="./quienes-somos.html">Quienes somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Catalogo.html">Catálogo</a>
+                            <a class="nav-link" href="./catalogo.html">Catálogo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Lorem1.html">Otra sección</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Lorem.html">Otra sección1</a>
+                            <a class="nav-link" href="./clientes.html">Clientes</a>
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -57,7 +57,6 @@
                     incidunt et corporis fugit, est libero, provident sint quia? Voluptate quam eius facilis beatae
                     itaque rerum blanditiis est id maxime ex deleniti dolorem, quas dolores minima exercitationem
                     aliquam ipsam, nulla earum, explicabo autem sequi. Nisi explicabo tenetur dicta odit ab illo,
-
                 </p>
             </div>
         </div>
