--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 <nav class="header__nav">
                     <ul class="header__nav--ul">
                         <li>
-                            <a href="./Quienes-somos.html">Quienes somos </a>
+                            <a href="./quienes-somos.html">Quienes somos </a>
                         </li>
                         <li>
-                            <a href="./Catalogo.html">Catalogo</a>
+                            <a href="./catalogo.html">Catalogo</a>
                         </li>
                         <li>
-                            <a href="./Lorem1.html">Contáctenos</a>
+                            <a href="./contacto.html">Contáctenos</a>
                         </li>
                         <li>
-                            <a href="./Lorem.html">Lorem </a>
+                            <a href="./clientes.html">Clientes</a>
                         </li>
                     </ul>
                 </nav>
@@ -41,24 +41,6 @@
                     </div>
                 </div>
             </header>
-            <div class="form-container">
-                <form class="form" action="">
-                    <label for="nombre">Nombre</label>
-                    <input class="form__input" type="text" name="nombre" id="nombre">
-                    <label for="apellido">Apellido</label>
-                    <input class="form__input" type="text" name="apellido" id="apellido">
-                    <label for="email">Email</label>
-                    <input class="form__input" type="email" name="email" id="email">
-                    <label for="contraseña">Contraseña</label>
-                    <input class="form__input" type="password" name="contraseña" id="contraseña">
-                    <label for="dni">N° DNI</label>
-                    <input class="form__input" type="text" name="dni" id="dni">
-                    <label for="comentarios">Comentarios</label>
-                    <input class="form__input" type="text" name="comentarios" id="comentarios">
-                    <button class="form__btn" type="reset">Resetear</button>
-                    <button class="form__btn2" type="submit">Enviar</button>
-                </form>
-            </div>
         </div>
         <!-- Me falta establecer una altura -->
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
