--- a/clientes.html
+++ b/clientes.html
@@ -20,16 +20,16 @@
                 </a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="./Quienes-somos.html">Quienes somos</a>
+                        <a class="nav-link" href="./quienes-somos.html">Quienes somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Catalogo.html">Catálogo</a>
+                        <a class="nav-link" href="./catalogo.html">Catálogo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Lorem1.html">Otra sección</a>
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Lorem.html">Otra sección1</a>
+                        <a class="nav-link" href="./clientes.html">Clientes</a>
                     </li>
                 </ul>
                 <form class="d-flex">
