agregando kw, titles, description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta name="description" content="Página de asesoramiento a la hora de buscar tu próximo auto. Descubre el auto que mejor se adapte a tu vida">
+    <meta name="keywords" content="Autos, Fiat, Asesoramiento, Toro, Cronos, Strada">
+    <meta name="author" content="Lautaro Aguilar">    
+    <meta name="copyright" content="Lautaro Aguilar"> 
+    <meta name="robots" content="index"/>
+    <title>Fiat-Giama</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="estilos.css">
