--- a/clientes.html
+++ b/clientes.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Página de asesoramiento a la hora de buscar tu próximo auto. Lea las reseñas de clientes anteriores contando su experiencia con nosotros.">
+    <meta name="keywords" content="Autos, Fiat, Asesoramiento, Clientes, Reseñas, Experiencias">
+    <meta name="author" content="Lautaro Aguilar">    
+    <meta name="copyright" content="Lautaro Aguilar"> 
+    <meta name="robots" content="index"/>
+    <title>Fiat-Giama. Clientes</title>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
